# pyorderbook

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  linked_list.py  order_book.py  pyproject.toml  test_order_book.py  update_pkg_version.py  util.py
.github/workflows/: project-ci.yml  python-package.yml
docs/superpowers/plans/: 2026-05-12-readme-examples.md
docs/superpowers/specs/: 2026-05-12-readme-examples-design.md
examples/: basic_matching.py  generate_sample_parquet.py  l2_snapshot.py  parquet_replay.py  sample_orders.parquet
examples/basic/: matching.py
examples/replay/: generate_sample_data.py  replay_and_snapshot.py  sample_orders.parquet
examples/snapshots/: snapshot_demo.py
orderbook/: __init__.py  book.py  level.py  order.py  orderbook.py  trade_blotter.py  transaction.py
pyorderbook/: __init__.py  book.py  level.py  order.py  snapshot.py  trade_blotter.py
src/: book.rs  getter.rs  lib.rs  order.rs  snapshot.rs  trade.rs
tests/: demo.py  test_order_book.py  test_python_backend.py  test_rust_backend.py
