[package]
name = "pyorderbook"
version = "0.5.0"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py311"] }
rust_decimal = { version = "1", features = ["maths"] }
uuid = { version = "1", features = ["v4"] }
