[build-system]
requires = [ "hatchling>=1.0.0",]
build-backend = "hatchling.build"

[project]
name = "orderbook"
version = "v0.4.0"
description = "Order Book and Matching Engine"
keywords = [ "orderbook", "order book", "limit order book", "matching engine",]
readme = "README.md"
requires-python = ">=3.12"
[[project.authors]]
name = "Zach Khorozian"
email = "zkhorozianbc@gmail.com"

[dependency-groups]
dev = [ "pre-commit>=4.1.0", "mypy>=1.13.0", "pytest>=8.3.3", "ruff>=0.7.4", "pre-commit>=3.5.0", "toml>=0.10.2",]

[project.license]
file = "LICENSE"

[project.urls]
Repository = "https://github.com/zkhorozianbc/orderbook"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true
[[tool.mypy.overrides]]
module = "toml"
ignore_missing_imports = true

[tool.ruff.lint]
select = [ "E", "F", "UP", "B", "SIM", "I",]
ignore = []
fixable = [ "ALL",]

[tool.hatch.build.targets.wheel]
packages = [ "orderbook",]
include = [ "orderbook/*.py", "test/*.py",]
